Fixed overflowing projects section

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -116,17 +116,18 @@ h5 {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  margin-top: 20vh;
 }
 .projects-section .projects-title {
   color: white;
 }
 .projects-section h1 {
   opacity: 0;
-  margin-bottom: 40px;
+  margin-top: 30vh;
 }
 .projects-section .projects-section-list {
   width: 100%;
-  height: fit-content;
+  height: 100%;
   flex-wrap: wrap;
   display: flex;
   justify-content: space-evenly;
@@ -143,7 +144,9 @@ h5 {
   color: rgba(255, 255, 255, 0.507);
   font-size: 13px;
   opacity: 0;
-  margin-bottom: 40px;
+  margin: 40px;
+  margin-top: 0px;
+  transition: 0.2s ease;
 }
 .projects-section .projects-section-list .project-list-item:hover {
   background-color: rgba(105, 105, 105, 0.021);
