--- a/src/scss/_projects.scss
+++ b/src/scss/_projects.scss
@@ -5,6 +5,7 @@
     height: 100vh;
     @include position-center;
     flex-direction: column;
+    margin-top: 20vh;
 
     .projects-title {
         color: white;
@@ -12,12 +13,12 @@
 
     h1 {
         opacity: 0;
-        margin-bottom: 40px;
+        margin-top: 30vh;
     }
 
     .projects-section-list {
         width: 100%;
-        height: fit-content;
+        height: 100%;
         flex-wrap: wrap;
         display: flex;
         justify-content:space-evenly;
@@ -32,7 +33,9 @@
             color: rgba(255, 255, 255, 0.507);
             font-size: 13px;
             opacity: 0;
-            margin-bottom: 40px;
+            margin: 40px;
+            margin-top: 0px;
+            transition: 0.2s ease;
 
             &:hover{
                 background-color: rgba(105, 105, 105, 0.021);
